| Summary: | ASTERISK-24827: Missing documentation for chan_dahdi dial string ring cadences | ||
| Reporter: | Scott Griepentrog (sgriepentrog) | Labels: | |
| Date Opened: | 2015-02-24 13:28:21.000-0600 | Date Closed: | 2022-05-02 15:47:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Documentation |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Ring cadences can be set in chan_dahdi.conf, but how to use them does not appear to be documented in sample configuration files nor the wiki.asterisk.org.
I discovered an old email list message from 2009 that documents how to specify the cadence in a dial string, and which also laments the lack of existant documentation at the time: http://lists.digium.com/pipermail/asterisk-users/2009-July/234471.html Since this is a necessary piece of information, but doesn't seem to fit into a wiki category under asterisk version reference information, possibly a new sub-category of channel driver specific documentation could be created? I'm not sure where this could be put in sample configs except as a comment at the top indicating usage of the dial string. A review of other channel drivers for similarly missing documentation should probably also be undertaken. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-05-02 15:47:01.600-0500 Change 18490 merged by Kevin Harwell: chan_dahdi: Document dial resource options. [https://gerrit.asterisk.org/c/asterisk/+/18490|https://gerrit.asterisk.org/c/asterisk/+/18490] By: Friendly Automation (friendly-automation) 2022-05-02 15:47:10.391-0500 Change 18491 merged by Kevin Harwell: chan_dahdi: Document dial resource options. [https://gerrit.asterisk.org/c/asterisk/+/18491|https://gerrit.asterisk.org/c/asterisk/+/18491] By: Friendly Automation (friendly-automation) 2022-05-02 15:47:19.551-0500 Change 18492 merged by Kevin Harwell: chan_dahdi: Document dial resource options. [https://gerrit.asterisk.org/c/asterisk/+/18492|https://gerrit.asterisk.org/c/asterisk/+/18492] By: Friendly Automation (friendly-automation) 2022-05-02 15:47:28.482-0500 Change 18302 merged by Kevin Harwell: chan_dahdi: Document dial resource options. [https://gerrit.asterisk.org/c/asterisk/+/18302|https://gerrit.asterisk.org/c/asterisk/+/18302] | ||